# filesync

./: Cargo.toml
src/: main.rs
