[package]
name = "filesync"
version = "0.1.0"
authors = ["Mark Nijboer <mark@nijboer.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
debug-assertions = false
debug = false
rpath = false
panic = "abort"

[dependencies]
walkdir = "2.3.1"
chrono = "0.4.19"